--- a/Iconizer/MainWindow.xib
+++ b/Iconizer/MainWindow.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7702"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MainWindowController" customModule="Iconizer" customModuleProvider="target">
             <connections>
+                <outlet property="car" destination="fQI-FX-Nhu" id="7s2-kX-ydV"/>
                 <outlet property="combined" destination="aoH-5m-8C9" id="A16-3o-3tI"/>
                 <outlet property="imageView" destination="a1k-ol-dvx" id="p86-Nk-6JC"/>
                 <outlet property="ipad" destination="W1y-2U-a6c" id="ykz-fl-6lH"/>
@@ -19,10 +20,10 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window title="Iconizer" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="zq5-tq-OcR">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" unifiedTitleAndToolbar="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="109" y="131" width="327" height="436"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="800"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
             <value key="minSize" type="size" width="327" height="436"/>
             <view key="contentView" id="dHQ-wJ-Gg8">
                 <rect key="frame" x="0.0" y="-3" width="327" height="436"/>
@@ -32,16 +33,6 @@
                         <rect key="frame" x="17" y="126" width="293" height="293"/>
                         <imageCell key="cell" selectable="YES" editable="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" imageFrameStyle="grayBezel" id="OMw-MU-rRL"/>
                     </imageView>
-                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rd6-rb-mdd">
-                        <rect key="frame" x="252" y="18" width="55" height="25"/>
-                        <buttonCell key="cell" type="roundTextured" title="Export" bezelStyle="texturedRounded" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="wP8-Dk-eoy">
-                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="system"/>
-                        </buttonCell>
-                        <connections>
-                            <action selector="export:" target="-2" id="JdY-ho-n9u"/>
-                        </connections>
-                    </button>
                     <box autoresizesSubviews="NO" title="Platforms" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="AeP-lJ-3Mp">
                         <rect key="frame" x="17" y="46" width="293" height="75"/>
                         <view key="contentView">
@@ -62,15 +53,22 @@
                                         <font key="font" metaFont="system"/>
                                     </buttonCell>
                                 </button>
+                                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fQI-FX-Nhu">
+                                    <rect key="frame" x="204" y="33" width="71" height="18"/>
+                                    <buttonCell key="cell" type="check" title="CarPlay" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="DD0-m7-jxz">
+                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                        <font key="font" metaFont="system"/>
+                                    </buttonCell>
+                                </button>
                                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W1y-2U-a6c">
-                                    <rect key="frame" x="145" y="33" width="50" height="18"/>
+                                    <rect key="frame" x="120" y="33" width="50" height="18"/>
                                     <buttonCell key="cell" type="check" title="iPad" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="QeT-Df-W1F">
                                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                         <font key="font" metaFont="system"/>
                                     </buttonCell>
                                 </button>
                                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZBA-jM-pP8">
-                                    <rect key="frame" x="145" y="12" width="49" height="18"/>
+                                    <rect key="frame" x="120" y="12" width="49" height="18"/>
                                     <buttonCell key="cell" type="check" title="Mac" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="gLv-Up-g6q">
                                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                         <font key="font" metaFont="system"/>
@@ -92,21 +90,17 @@
                         </buttonCell>
                     </button>
                     <progressIndicator hidden="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="ZLK-N9-u3e">
-                        <rect key="frame" x="228" y="23" width="16" height="16"/>
+                        <rect key="frame" x="291" y="23" width="16" height="16"/>
                     </progressIndicator>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="rd6-rb-mdd" secondAttribute="bottom" constant="20" id="2wZ-xH-H6U"/>
                     <constraint firstAttribute="bottom" secondItem="ZLK-N9-u3e" secondAttribute="bottom" constant="23" id="6Ca-Li-a8K"/>
                     <constraint firstItem="a1k-ol-dvx" firstAttribute="top" secondItem="dHQ-wJ-Gg8" secondAttribute="top" constant="20" id="FGJ-Zk-5vK"/>
-                    <constraint firstItem="rd6-rb-mdd" firstAttribute="leading" secondItem="ZLK-N9-u3e" secondAttribute="trailing" constant="8" id="I9x-SQ-F38"/>
+                    <constraint firstAttribute="trailing" secondItem="ZLK-N9-u3e" secondAttribute="trailing" constant="20" id="Lz7-qt-otC"/>
                     <constraint firstItem="aoH-5m-8C9" firstAttribute="top" secondItem="AeP-lJ-3Mp" secondAttribute="bottom" constant="12" id="Mc1-DA-uQG"/>
                     <constraint firstItem="AeP-lJ-3Mp" firstAttribute="leading" secondItem="dHQ-wJ-Gg8" secondAttribute="leading" constant="20" id="PPr-dc-VtU"/>
-                    <constraint firstItem="rd6-rb-mdd" firstAttribute="top" secondItem="AeP-lJ-3Mp" secondAttribute="bottom" constant="8" id="UUI-yc-HVr"/>
                     <constraint firstItem="AeP-lJ-3Mp" firstAttribute="top" secondItem="a1k-ol-dvx" secondAttribute="bottom" constant="8" id="gLY-Wp-H42"/>
                     <constraint firstItem="AeP-lJ-3Mp" firstAttribute="top" secondItem="a1k-ol-dvx" secondAttribute="bottom" constant="8" id="pc0-AX-2fu"/>
-                    <constraint firstItem="rd6-rb-mdd" firstAttribute="top" secondItem="AeP-lJ-3Mp" secondAttribute="bottom" constant="8" id="qiA-z2-xe7"/>
-                    <constraint firstAttribute="trailing" secondItem="rd6-rb-mdd" secondAttribute="trailing" constant="20" id="rFo-Jc-dMa"/>
                     <constraint firstAttribute="trailing" secondItem="a1k-ol-dvx" secondAttribute="trailing" constant="20" id="uMj-q6-00m"/>
                     <constraint firstAttribute="bottom" secondItem="aoH-5m-8C9" secondAttribute="bottom" constant="24" id="ud1-On-ZMQ"/>
                     <constraint firstItem="a1k-ol-dvx" firstAttribute="leading" secondItem="dHQ-wJ-Gg8" secondAttribute="leading" constant="20" id="vKZ-wS-Jd2"/>
@@ -114,10 +108,39 @@
                     <constraint firstItem="aoH-5m-8C9" firstAttribute="leading" secondItem="dHQ-wJ-Gg8" secondAttribute="leading" constant="20" id="zGp-mW-bNa"/>
                 </constraints>
             </view>
+            <toolbar key="toolbar" implicitIdentifier="AF211557-D6ED-4AB3-81A4-8F2F18679E5C" displayMode="iconAndLabel" sizeMode="regular" id="qa7-oE-xVa">
+                <allowedToolbarItems>
+                    <toolbarItem implicitItemIdentifier="NSToolbarSpaceItem" id="0u1-qq-qGT"/>
+                    <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="2JB-4T-bEb"/>
+                    <toolbarItem implicitItemIdentifier="3C00CA6F-42D5-40BB-B47A-D644C9582CFE" label="Export" paletteLabel="Export" image="NSShareTemplate" id="hZH-TK-hYJ">
+                        <nil key="toolTip"/>
+                        <size key="minSize" width="34" height="28"/>
+                        <size key="maxSize" width="34" height="29"/>
+                        <button key="view" verticalHuggingPriority="750" id="kUX-Ax-W0E">
+                            <rect key="frame" x="7" y="14" width="34" height="28"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <buttonCell key="cell" type="squareTextured" bezelStyle="texturedSquare" image="NSShareTemplate" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="UKi-tF-mGx">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                        </button>
+                        <connections>
+                            <action selector="export:" target="-2" id="dSS-D0-xmh"/>
+                        </connections>
+                    </toolbarItem>
+                </allowedToolbarItems>
+                <defaultToolbarItems>
+                    <toolbarItem reference="2JB-4T-bEb"/>
+                    <toolbarItem reference="hZH-TK-hYJ"/>
+                </defaultToolbarItems>
+            </toolbar>
             <connections>
                 <outlet property="delegate" destination="-2" id="fdr-JF-i66"/>
             </connections>
             <point key="canvasLocation" x="-335.5" y="214"/>
         </window>
     </objects>
+    <resources>
+        <image name="NSShareTemplate" width="11" height="16"/>
+    </resources>
 </document>
