--- a/Iconizer/MainWindow.xib
+++ b/Iconizer/MainWindow.xib
@@ -2,19 +2,12 @@
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MainWindowController" customModule="Iconizer" customModuleProvider="target">
             <connections>
-                <outlet property="car" destination="fQI-FX-Nhu" id="7s2-kX-ydV"/>
-                <outlet property="combined" destination="aoH-5m-8C9" id="A16-3o-3tI"/>
-                <outlet property="imageView" destination="a1k-ol-dvx" id="p86-Nk-6JC"/>
-                <outlet property="ipad" destination="W1y-2U-a6c" id="ykz-fl-6lH"/>
-                <outlet property="iphone" destination="Zh4-O0-42y" id="ZzX-RO-AcK"/>
-                <outlet property="mac" destination="ZBA-jM-pP8" id="rND-mO-Jwd"/>
-                <outlet property="progressIndicator" destination="ZLK-N9-u3e" id="0LM-GX-y0K"/>
-                <outlet property="watch" destination="fon-mP-ces" id="l3l-es-5yH"/>
+                <outlet property="exportType" destination="zU3-2P-5PS" id="FJG-JU-3h4"/>
+                <outlet property="mainView" destination="dHQ-wJ-Gg8" id="XA6-Br-hZX"/>
                 <outlet property="window" destination="zq5-tq-OcR" id="0Hn-X4-rU2"/>
             </connections>
         </customObject>
@@ -23,94 +16,12 @@
         <window title="Iconizer" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="zq5-tq-OcR">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" unifiedTitleAndToolbar="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="109" y="131" width="460" height="571"/>
+            <rect key="contentRect" x="109" y="131" width="459.99999678134913" height="571"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
             <value key="minSize" type="size" width="460" height="571"/>
             <view key="contentView" id="dHQ-wJ-Gg8">
-                <rect key="frame" x="0.0" y="-5" width="460" height="571"/>
+                <rect key="frame" x="0.0" y="0.0" width="460" height="571"/>
                 <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a1k-ol-dvx">
-                        <rect key="frame" x="17" y="126" width="426" height="428"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="a1k-ol-dvx" secondAttribute="height" multiplier="210:211" id="Imu-Ga-wKh"/>
-                        </constraints>
-                        <imageCell key="cell" selectable="YES" editable="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" imageFrameStyle="grayBezel" id="OMw-MU-rRL"/>
-                    </imageView>
-                    <box autoresizesSubviews="NO" title="Platforms" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="AeP-lJ-3Mp">
-                        <rect key="frame" x="17" y="46" width="426" height="75"/>
-                        <view key="contentView">
-                            <rect key="frame" x="1" y="1" width="424" height="59"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <subviews>
-                                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zh4-O0-42y">
-                                    <rect key="frame" x="16" y="33" width="65" height="18"/>
-                                    <buttonCell key="cell" type="check" title="iPhone" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="d3K-1i-s9r">
-                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                        <font key="font" metaFont="system"/>
-                                    </buttonCell>
-                                </button>
-                                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fon-mP-ces">
-                                    <rect key="frame" x="16" y="12" width="61" height="18"/>
-                                    <buttonCell key="cell" type="check" title="Watch" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="dng-aO-CvA">
-                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                        <font key="font" metaFont="system"/>
-                                    </buttonCell>
-                                </button>
-                                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fQI-FX-Nhu">
-                                    <rect key="frame" x="204" y="33" width="71" height="18"/>
-                                    <buttonCell key="cell" type="check" title="CarPlay" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="DD0-m7-jxz">
-                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                        <font key="font" metaFont="system"/>
-                                    </buttonCell>
-                                </button>
-                                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W1y-2U-a6c">
-                                    <rect key="frame" x="120" y="33" width="50" height="18"/>
-                                    <buttonCell key="cell" type="check" title="iPad" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="QeT-Df-W1F">
-                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                        <font key="font" metaFont="system"/>
-                                    </buttonCell>
-                                </button>
-                                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZBA-jM-pP8">
-                                    <rect key="frame" x="120" y="12" width="49" height="18"/>
-                                    <buttonCell key="cell" type="check" title="Mac" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="gLv-Up-g6q">
-                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                        <font key="font" metaFont="system"/>
-                                    </buttonCell>
-                                </button>
-                            </subviews>
-                        </view>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="71" id="a6U-y7-8nm"/>
-                        </constraints>
-                        <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                        <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </box>
-                    <button translatesAutoresizingMaskIntoConstraints="NO" id="aoH-5m-8C9">
-                        <rect key="frame" x="18" y="22" width="196" height="18"/>
-                        <buttonCell key="cell" type="check" title="Export as combined catalog" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="AVl-jB-FOq">
-                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                            <font key="font" metaFont="system"/>
-                        </buttonCell>
-                    </button>
-                    <progressIndicator hidden="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="ZLK-N9-u3e">
-                        <rect key="frame" x="424" y="23" width="16" height="16"/>
-                    </progressIndicator>
-                </subviews>
-                <constraints>
-                    <constraint firstAttribute="bottom" secondItem="ZLK-N9-u3e" secondAttribute="bottom" constant="23" id="6Ca-Li-a8K"/>
-                    <constraint firstItem="a1k-ol-dvx" firstAttribute="top" secondItem="dHQ-wJ-Gg8" secondAttribute="top" constant="20" id="FGJ-Zk-5vK"/>
-                    <constraint firstAttribute="trailing" secondItem="ZLK-N9-u3e" secondAttribute="trailing" constant="20" id="Lz7-qt-otC"/>
-                    <constraint firstItem="aoH-5m-8C9" firstAttribute="top" secondItem="AeP-lJ-3Mp" secondAttribute="bottom" constant="12" id="Mc1-DA-uQG"/>
-                    <constraint firstItem="AeP-lJ-3Mp" firstAttribute="leading" secondItem="dHQ-wJ-Gg8" secondAttribute="leading" constant="20" id="PPr-dc-VtU"/>
-                    <constraint firstItem="AeP-lJ-3Mp" firstAttribute="top" secondItem="a1k-ol-dvx" secondAttribute="bottom" constant="8" id="gLY-Wp-H42"/>
-                    <constraint firstItem="AeP-lJ-3Mp" firstAttribute="top" secondItem="a1k-ol-dvx" secondAttribute="bottom" constant="8" id="pc0-AX-2fu"/>
-                    <constraint firstAttribute="trailing" secondItem="a1k-ol-dvx" secondAttribute="trailing" constant="20" id="uMj-q6-00m"/>
-                    <constraint firstAttribute="bottom" secondItem="aoH-5m-8C9" secondAttribute="bottom" constant="24" id="ud1-On-ZMQ"/>
-                    <constraint firstItem="a1k-ol-dvx" firstAttribute="leading" secondItem="dHQ-wJ-Gg8" secondAttribute="leading" constant="20" id="vKZ-wS-Jd2"/>
-                    <constraint firstAttribute="trailing" secondItem="AeP-lJ-3Mp" secondAttribute="trailing" constant="20" id="vnR-Xg-kwO"/>
-                    <constraint firstItem="aoH-5m-8C9" firstAttribute="leading" secondItem="dHQ-wJ-Gg8" secondAttribute="leading" constant="20" id="zGp-mW-bNa"/>
-                </constraints>
             </view>
             <toolbar key="toolbar" implicitIdentifier="AF211557-D6ED-4AB3-81A4-8F2F18679E5C" displayMode="iconOnly" sizeMode="regular" id="qa7-oE-xVa">
                 <allowedToolbarItems>
@@ -128,9 +39,12 @@
                                 <segments>
                                     <segment label="App Icon" width="100" selected="YES"/>
                                     <segment label="Image Set" width="100" tag="1"/>
-                                    <segment label="Launch Image" width="100"/>
+                                    <segment label="Launch Image" width="100" tag="2"/>
                                 </segments>
                             </segmentedCell>
+                            <connections>
+                                <action selector="selectView:" target="-2" id="XaE-Rr-Qni"/>
+                            </connections>
                         </segmentedControl>
                     </toolbarItem>
                     <toolbarItem implicitItemIdentifier="3C00CA6F-42D5-40BB-B47A-D644C9582CFE" label="Export" paletteLabel="Export" image="NSShareTemplate" id="hZH-TK-hYJ">
